@@ -473,12 +473,6 @@ public class Main extends MapActivity
         });*/
     }
 		
-	public static void displayInstructions(Context context)
-	{
-		Intent intent = new Intent(context, Instructions.class);
-		context.startActivity(intent);
-	}
-
 	private static String[] getRouteTitles(String[] dropdownRoutes,
 			HashMap<String, String> dropdownRouteKeysToTitles) {
     	String[] ret = new String[dropdownRoutes.length];
@@ -829,7 +823,7 @@ public class Main extends MapActivity
     	
     	boolean alwaysUpdateLocationValue = prefs.getBoolean(getString(R.string.alwaysShowLocationCheckbox), true);
     	
-    	String intervalString = new Integer(updateInterval).toString();
+    	String intervalString = Integer.valueOf(updateInterval).toString();
     	//since the default value for this flag is true, make sure we let the preferences know of this
     	prefs.edit().
     		putBoolean(getString(R.string.alwaysShowLocationCheckbox), alwaysUpdateLocationValue).
